--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".registered_page2"></activity>
+        <activity android:name=".registered_page0"></activity>
+        <activity android:name=".registered_page2" />
         <activity android:name=".home_page" />
         <activity android:name=".MainActivity">
             <intent-filter>
