--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.ccumis.food">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
 
     <application
         android:name=".Home"
@@ -13,18 +15,27 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".chatroom" />
-        <activity android:name=".businregist_page" />
-        <activity android:name=".registered_page2" />
-        <activity android:name=".home_page" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".addGoods"
+            android:theme="@style/AppTheme.Pop_window"
+            android:screenOrientation="nosensor"/>
+        <activity android:name=".chatroom"
+            android:screenOrientation="nosensor"/>
+        <activity android:name=".businregist_page"
+            android:screenOrientation="nosensor"/>
+        <activity android:name=".registered_page2"
+            android:screenOrientation="nosensor"/>
+        <activity android:name=".home_page"
+            android:screenOrientation="nosensor"/>
+        <activity android:name=".MainActivity"
+            android:screenOrientation="nosensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".registered_page" />
+        <activity android:name=".registered_page"
+            android:screenOrientation="nosensor"/>
     </application>
 
 </manifest>
